--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <body>
+    <button class = "btn1"></button>
+    <button class = "btn2"></button>
+    <button class = "btn3"></button>
+  </body>
+</html>
